tests/ui/associated-type-bounds/issue-104916.stderr
error: associated type bounds are only allowed in where clauses and function signatures, not in bounds
  --> $DIR/issue-104916.rs:9:19
   |
LL |     dyn for<'j> B<AssocType: 'j>:,
   |                   ^^^^^^^^^^^^^

error: aborting due to previous error

